Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132841

Android QtAbstractItemModel wrong JNI call for sibling() method

XMLWordPrintable

    • Android
    • 190c85b70 (dev), bbcf5a419 (6.9), 4dfbbe66b (6.8)

      The signature deduction of the JNI sibling() method resolves to return Ljava.lang.Object; which is wrong. The sibling() method return a QtModelIndex java type.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            soarmin Soheil Armin
            soarmin Soheil Armin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes